--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -41,6 +41,7 @@ steps:
   - 'PYTHON_VERSION=$_PYTHON_VERSION'
   - 'USE_KFP_SA=$_USE_KFP_SA'
   - 'ENABLE_TUNING=$_ENABLE_TUNING'
+  - 'LOGS_BUCKET=$_LOGS_BUCKET'
   dir: $_PIPELINE_FOLDER
 
 
