--- a/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
+++ b/workshops/tfx-caip-tf23/lab-03-tfx-cicd/labs/cloudbuild.yaml
@@ -41,9 +41,10 @@ steps:
   - 'PYTHON_VERSION=$_PYTHON_VERSION'
   - 'USE_KFP_SA=$_USE_KFP_SA'
   - 'ENABLE_TUNING=$_ENABLE_TUNING'
-  - 'LOGS_BUCKET=$_LOGS_BUCKET'
   dir: $_PIPELINE_FOLDER
 
+options:
+  logging: CLOUD_LOGGING_ONLY
 
 # Push the custom image to Container Registry 
 images: ['gcr.io/$PROJECT_ID/$_TFX_IMAGE_NAME:$TAG_NAME']
